append loader css to pages css

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -73882,3 +73882,383 @@ img {
     padding-right: calc(env(safe-area-inset-right, 20px) - 20px) !important;
   }
 }
+
+/*! LOADER-SPECIFIC CLASSES START */
+.dir.f1xx50dm[class][class] {
+    padding: 0 var(--lilsearch-field_padding-inline);
+  }
+  .f1xx50dm[class][class] {
+    font-size: var(--c-zdwk-p);
+    line-height: var(--j-p-z-kco);
+    font-weight: var(--jx-zk-pv);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    flex: 1 1 auto;
+    min-width: var(--lilsearch-field-text_min-width,0);
+  }
+  
+  .dir.atm_2d_1r31cwp.atm_2d_1r31cwp {
+    background-color: currentColor;
+  }
+  
+  .dir.atm_1k_1ytfnp0.atm_1k_1ytfnp0 {
+    animation-timing-function: ease-in-out;
+  }
+  
+  @keyframes animation-64e8c8 {
+    0% {
+      opacity: 0.09049773755656108;
+    }
+    100% {
+      opacity: 0.15384615384615385;
+    }
+  }
+  
+  .dir.atm_16_12c5xpv.atm_16_12c5xpv {
+    animation-iteration-count: infinite;
+  }
+  
+  .dir.atm_y_9cwzv5.atm_y_9cwzv5 {
+    animation-duration: 1s;
+  }
+  
+  .dir.atm_u_1yy80mb.atm_u_1yy80mb {
+    animation-direction: alternate;
+  }
+  
+  .cbdpsi8[class][class] {
+    display: grid;
+    overflow: hidden;
+    overflow: clip;
+    grid-template-columns: minmax(0,1fr);
+  }
+  
+  .rztl681[class][class] {
+    display: grid;
+    grid-template:
+        var( --contentscroller_layout_grid-template,
+        'header'
+        'scroller'
+        'footer' / minmax(0,1fr) );
+  }
+  .rztl681[class][class] {
+    display: grid;
+    grid-template:
+        var( --contentscroller_layout_grid-template,
+        'header'
+        'scroller'
+        'footer' / minmax(0,1fr) );
+  }
+  
+  
+  .dir.dbldy2s[class][class] {
+    border: 0;
+    padding: 0;
+  }
+  .dir.dbldy2s[class][class] {
+    border: 0;
+    padding: 0;
+  }
+  .dbldy2s[class][class] {
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(100%);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    overflow: clip;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+  .dbldy2s[class][class] {
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(100%);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    overflow: clip;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+  .dir.p1rmpakb[class][class] {
+    background: var(--f-mkcy-f);
+    transform: translateX(0);
+  }
+  .cbdpsi8[class][class] > :nth-child(n) {
+    grid-area: 1 / 1 / -1 / -1;
+    height: 100%;
+  }
+  .p1rmpakb[class][class] {
+    overflow: hidden;
+    overflow: clip;
+    will-change: transform;
+  }
+  .dir.p3wm8pa[class][class] {
+    transform: translateX(0%);
+  }
+  .p3wm8pa[class][class] {
+    will-change: transform;
+  }
+  .dir.p14wfpb5[class][class] {
+    /* -webkit-padding-start: var(--contentscroller_peek);
+    padding-inline-start: var(--contentscroller_peek); */
+  }
+  .p14wfpb5[class][class] {
+    align-items: center;
+    display: flex;
+    gap: var(--chipsbar_chip-spacing);
+    pointer-events: none;
+  }
+  .p14wfpb5 .cmrodwo[class][class] {
+    display: flex;
+    flex-direction: row;
+    padding-block: 0 16px !important;
+    padding-bottom: 0 !important;
+  }
+  
+  @media (min-width: 744px) {
+    .p14wfpb5 .cmrodwo[class][class] {
+      gap: none !important;
+    }
+  }
+  
+  .c6db4u2[class][class] {
+      --shimer-image_size: 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-block: 18px 16px;
+      gap: var(--h-x-sf-jw);
+  }
+  
+  @media (min-width: 744px) {
+    .c6db4u2[class][class] {
+      gap: var(--fgg-f-l-a);
+      -webkit-padding-after: 12px;
+      padding-block-end: 12px;
+    }
+  }
+  
+  .i1g6c6ad[class][class] {
+      flex-shrink: 0;
+      width: var(--shimer-image_size,24px);
+      height: var(--shimer-image_size,24px);
+  }
+  
+  @media (min-width: 950px) {
+    .i1g6c6ad[class][class] {
+      --shimer-image_size: 28px;
+    }
+  }
+  
+  .dir.atm_1c_glywfm.atm_1c_glywfm {
+    animation-name: none;
+  }
+  
+  .dir.atm_12_q7pw6w.atm_12_q7pw6w {
+    animation-fill-mode: forwards;
+  }
+  
+  .atm_k4_7tcf61 {
+    opacity: 0.09049773755656108;
+  }
+  
+  .atm_9s_1ulexfb {
+      display: block;
+  }
+  
+  .dir.c1pbo4kt[class][class] {
+    margin: 0;
+    padding-top: 0;
+  }
+  
+  .c1pbo4kt[class][class] {
+    flex-direction: column;
+    grid-area: 1 / 1 / 2 / 2;
+    height: 100%;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 2;
+  }
+  
+  .l179zchc[class][class] {
+    visibility: visible;
+    content-visibility: visible;
+    opacity: 1;
+  }
+  
+  .dir.m1cp3yuo[class][class] {
+    margin-bottom: var(--b-y-unon);
+  }
+  .m1cp3yuo[class][class] {
+    --aspect_ratio_wrapper-ratio: 20 / 19;
+    --aspect_ratio_wrapper-padding_fallback: 95%;
+    --aspect_ratio_wrapper-position_fallback: relative;
+  }
+  
+  @supports (aspect-ratio:1 / 1) {
+    .awuxh4x[class][class] {
+      aspect-ratio: var(--aspect_ratio_wrapper-ratio,unset);
+    }
+  }
+  
+  .cw9aemg[class][class] {
+    height: 100%;
+    min-width: 0;
+    position: unset;
+  }
+  
+  .cb4nyux[class][class] {
+    display: grid;
+    grid-gap: var(--card-content-grid_gap,var(--h-x-sf-jw));
+    gap: var(--card-content-grid_gap,var(--h-x-sf-jw));
+    grid-template-columns: var( --card-content-grid_template-columns, minmax(0,1fr) -webkit-max-content );
+    grid-template-columns: var( --card-content-grid_template-columns, minmax(0,1fr) max-content );
+    grid-template-rows: var(--card-content-grid_template-rows,unset);
+  }
+  
+  .g1wiliwt[class][class] {
+    --card-content-grid_gap: var(--d-b-mrdy) var(--fgg-f-l-a);
+    --card-content-grid_template-columns: minmax(0,1fr) 15%;
+  }
+  
+  .a3g92ry[class][class] {
+    grid-column: -2/-1;
+    grid-row: 1;
+    justify-self: end;
+    width: 100%;
+  }
+  
+  .f15liw5s[class][class] {
+    grid-column: 1 / -1;
+  }
+  
+  .dir.pc0djro[class][class] {
+    margin-top: 6px;
+  }
+  .pc0djro[class][class] {
+    grid-column: 1 / -1;
+  }
+  
+  ._1ltqfox {
+    background: rgb(255, 255, 255) !important;
+    inset: 0px !important;
+    opacity: 1 !important;
+    position: absolute !important;
+    transition: opacity 300ms ease-out 0s !important;
+  }
+  
+  .h1a2w4o2[class][class] {
+    visibility: hidden;
+  }
+  
+  .dir.a8jt5op[class][class] {
+    border: 0;
+    padding: 0;
+  }
+  
+  .a8jt5op[class][class] {
+    clip: rect(0 0 0 0);
+    -webkit-clip-path: inset(100%);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    overflow: clip;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+  
+  ._8od0vn4 {
+    background-color: rgb(255, 255, 255) !important;
+    width: 6px !important;
+    height: 6px !important;
+    margin-right: 4px !important;
+    border-radius: 100% !important;
+    display: inline-block !important;
+    animation-name: keyframe_1fk160q !important;
+    animation-duration: 0.8s !important;
+    animation-iteration-count: infinite !important;
+    animation-timing-function: linear !important;
+    animation-fill-mode: both !important;
+    vertical-align: middle !important;
+    animation-delay: -0.3s !important;
+  }
+  
+  ._xeg0rs5 {
+    background-color: rgb(255, 255, 255) !important;
+    width: 6px !important;
+    height: 6px !important;
+    margin-right: 4px !important;
+    border-radius: 100% !important;
+    display: inline-block !important;
+    animation-name: keyframe_1fk160q !important;
+    animation-duration: 0.8s !important;
+    animation-iteration-count: infinite !important;
+    animation-timing-function: linear !important;
+    animation-fill-mode: both !important;
+    vertical-align: middle !important;
+    animation-delay: -0.15s !important;
+  }
+  
+  ._1j74bfux {
+    background-color: rgb(255, 255, 255) !important;
+    width: 6px !important;
+    height: 6px !important;
+    border-radius: 100% !important;
+    display: inline-block !important;
+    animation-name: keyframe_1fk160q !important;
+    animation-duration: 0.8s !important;
+    animation-iteration-count: infinite !important;
+    animation-timing-function: linear !important;
+    animation-fill-mode: both !important;
+    vertical-align: middle !important;
+    margin-right: 0px !important;
+  }
+  
+  @keyframes keyframe_1fk160q {
+    0%, 80%, 100% {
+      opacity: 0;
+    }
+    30%, 50% {
+      opacity: 1;
+    }  
+  }
+  
+  .portrait-listings-grid-card-container-mobile ._l7ztla,
+  .explore-grouped-listings-carousel-item ._l7ztla,
+  .portrait-listings-grid-card-container ._l7ztla,
+  .explore__list-full-wh ._l7ztla,
+  .explore__container-list ._l7ztla {
+    opacity: 0 !important;
+    transition: 300ms ease-out;
+  }
+  
+  .portrait-listings-grid-card-container-mobile:hover ._l7ztla,
+  .explore-grouped-listings-carousel-item:hover ._l7ztla,
+  .portrait-listings-grid-card-container:hover ._l7ztla,
+  .explore__list-full-wh:hover ._l7ztla,
+  .explore__container-list:hover ._l7ztla {
+    opacity: 1 !important;
+  }
+  
+  /* .card-portrait__media ._l7ztla {
+    opacity: 0 !important;
+    visibility: hidden !important;
+  } */
+  
+  /* @media (hover: hover) {
+    ._1ltqfox ._l7ztla {
+      opacity: 1 !important;
+      visibility: visible !important;
+    }
+  } */
+  
+  .black-dots>._8od0vn4,
+  .black-dots>._xeg0rs5,
+  .black-dots>._1j74bfux{
+    background-color: rgb(0, 0, 0) !important;
+  }
+/*! LOADER-SPECIFIC CLASSES END */
