--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -58362,7 +58362,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --mq-yk-l: 0.04em;
 }
 
-.csrtfuq[class][class] {
+.initial[class][class] {
   display: initial;
 }
 
