--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -58366,33 +58366,33 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: initial;
 }
 
-.c1pzwz3g[class][class] {
+.accessibility__hero-container[class][class] {
   width: 100%;
   height: inherit;
 }
 
-.dir.c1pzwz3g[class][class] {
+.dir.accessibility__hero-container[class][class] {
   margin: auto;
   padding-right: var(--ikx-k-pe);
   padding-left: var(--ikx-k-pe);
 }
 
 @media (min-width:744px) {
-  .dir.c1pzwz3g[class][class] {
+  .dir.accessibility__hero-container[class][class] {
     padding-right: var(--f-fw-z-a-i);
     padding-left: var(--f-fw-z-a-i);
   }
 }
 
 @media (min-width:1128px) {
-  .dir.c1pzwz3g[class][class] {
+  .dir.accessibility__hero-container[class][class] {
     padding-right: var(--cy-o-aco);
     padding-left: var(--cy-o-aco);
   }
 }
 
 @media (min-width:1440px) {
-  .c1pzwz3g[class][class] {
+  .accessibility__hero-container[class][class] {
     max-width: 1440px;
   }
 }
