--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -58397,13 +58397,13 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-.cla6gjt[class][class] {
+.accessibility__hero-text[class][class] {
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
-.dir.cla6gjt[class][class] {
+.dir.accessibility__hero-text[class][class] {
   margin-left: auto;
   margin-right: auto;
   padding-top: var(--cy-o-aco);
@@ -58411,14 +58411,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width:744px) {
-  .dir.cla6gjt[class][class] {
+  .dir.accessibility__hero-text[class][class] {
     padding-top: var(--cw-a-a-u-a);
     padding-bottom: var(--kksqe-v);
   }
 }
 
 @media (min-width:950px) {
-  .dir.cla6gjt[class][class] {
+  .dir.accessibility__hero-text[class][class] {
     padding-bottom: var(--cy-o-aco);
   }
 }
