rename accessibility__hero & accessbility__feature

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -57768,7 +57768,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   font-size: 32px !important;
 }
 
-._1y4ibvpm {
+.accessibility__feature-col-1 {
   position: relative !important;
   width: 50% !important;
   margin-left: 0% !important;
@@ -57778,14 +57778,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 375px) {
-  ._1y4ibvpm {
+  .accessibility__feature-col-1 {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 
 @media (min-width: 744px) {
-  ._1y4ibvpm {
+  .accessibility__feature-col-1 {
     width: 50% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
@@ -57793,7 +57793,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 950px) {
-  ._1y4ibvpm {
+  .accessibility__feature-col-1 {
     width: 41.66666666666667% !important;
     margin-left: 8.333333333333332% !important;
     padding-left: 8px !important;
@@ -57802,14 +57802,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 1128px) {
-  ._1y4ibvpm {
+  .accessibility__feature-col-1 {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 
 @media (min-width: 1440px) {
-  ._1y4ibvpm {
+  .accessibility__feature-col-1 {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -57928,7 +57928,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   text-decoration: underline !important;
 }
 
-._b7k3wng {
+.accessibility__feature-col-2 {
   position: relative !important;
   width: 50% !important;
   margin-left: 0% !important;
@@ -57938,14 +57938,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 375px) {
-  ._b7k3wng {
+  .accessibility__feature-col-2 {
     padding-left: 6px !important;
     padding-right: 6px !important;
   }
 }
 
 @media (min-width: 744px) {
-  ._b7k3wng {
+  .accessibility__feature-col-2 {
     width: 50% !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
@@ -57953,7 +57953,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 950px) {
-  ._b7k3wng {
+  .accessibility__feature-col-2 {
     width: 33.33333333333333% !important;
     margin-left: 8.333333333333332% !important;
     margin-right: 8.333333333333332% !important;
@@ -57963,14 +57963,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 }
 
 @media (min-width: 1128px) {
-  ._b7k3wng {
+  .accessibility__feature-col-2 {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
 }
 
 @media (min-width: 1440px) {
-  ._b7k3wng {
+  .accessibility__feature-col-2 {
     padding-left: 8px !important;
     padding-right: 8px !important;
   }
@@ -58366,33 +58366,33 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: initial;
 }
 
-.accessibility__hero-container[class][class] {
+.accessibility__container[class][class] {
   width: 100%;
   height: inherit;
 }
 
-.dir.accessibility__hero-container[class][class] {
+.dir.accessibility__container[class][class] {
   margin: auto;
   padding-right: var(--ikx-k-pe);
   padding-left: var(--ikx-k-pe);
 }
 
 @media (min-width:744px) {
-  .dir.accessibility__hero-container[class][class] {
+  .dir.accessibility__container[class][class] {
     padding-right: var(--f-fw-z-a-i);
     padding-left: var(--f-fw-z-a-i);
   }
 }
 
 @media (min-width:1128px) {
-  .dir.accessibility__hero-container[class][class] {
+  .dir.accessibility__container[class][class] {
     padding-right: var(--cy-o-aco);
     padding-left: var(--cy-o-aco);
   }
 }
 
 @media (min-width:1440px) {
-  .accessibility__hero-container[class][class] {
+  .accessibility__container[class][class] {
     max-width: 1440px;
   }
 }
@@ -58423,7 +58423,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-.tszmtkf[class][class] {
+.accessibility__hero-title[class][class] {
   -webkit-letter-spacing: -0.04em;
   -moz-letter-spacing: -0.04em;
   -ms-letter-spacing: -0.04em;
@@ -58435,116 +58435,116 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   line-height: 44px;
 }
 
-.dir.tszmtkf[class][class] {
+.dir.accessibility__hero-title[class][class] {
   text-align: center;
   margin-bottom: 0;
 }
 
 @media (min-width:375px) {
-  .tszmtkf[class][class] {
+  .accessibility__hero-title[class][class] {
     font-size: 56px;
     line-height: 50px;
   }
 }
 
 @media (min-width:744px) {
-  .tszmtkf[class][class] {
+  .accessibility__hero-title[class][class] {
     font-size: 100px;
     line-height: 100px;
   }
 }
 
 @media (min-width:1440px) {
-  .tszmtkf[class][class] {
+  .accessibility__hero-title[class][class] {
     font-size: 150px;
     line-height: 150px;
   }
 }
 
-.sqwourp[class][class] {
+.accessibility__hero-desc[class][class] {
   font-weight: var(--e-y-j-d-v-j);
   font-size: var(--lhy-d-yl);
   line-height: var(--fme-bf-w);
 }
 
-.dir.sqwourp[class][class] {
+.dir.accessibility__hero-desc[class][class] {
   text-align: center;
   margin: 0;
   padding-top: var(--kksqe-v);
 }
 
 @media (min-width:375px) {
-  .dir.sqwourp[class][class] {
+  .dir.accessibility__hero-desc[class][class] {
     padding-left: var(--ikx-k-pe);
     padding-right: var(--ikx-k-pe);
   }
 }
 
 @media (min-width:744px) {
-  .sqwourp[class][class] {
+  .accessibility__hero-desc[class][class] {
     font-size: 29px;
     line-height: 30px;
     max-width: 515px;
   }
 
-  .dir.sqwourp[class][class] {
+  .dir.accessibility__hero-desc[class][class] {
     padding-left: 0;
     padding-right: 0;
   }
 }
 
 @media (min-width:950px) {
-  .dir.sqwourp[class][class] {
+  .dir.accessibility__hero-desc[class][class] {
     padding-top: var(--cw-a-a-u-a);
   }
 }
 
 @media (min-width:1440px) {
-  .sqwourp[class][class] {
+  .accessibility__hero-desc[class][class] {
     font-size: 35px;
     line-height: 39px;
     max-width: 630px;
   }
 
-  .dir.sqwourp[class][class] {
+  .dir.accessibility__hero-desc[class][class] {
     padding-top: var(--cw-a-a-u-a);
   }
 }
 
-.dir.c1fovbcy[class][class] {
+.dir.accessibility__feature-list[class][class] {
   padding-top: var(--cw-a-a-u-a);
 }
 
 @media (min-width:744px) {
-  .dir.c1fovbcy[class][class] {
+  .dir.accessibility__feature-list[class][class] {
     padding-top: var(--kksqe-v);
   }
 }
 
 @media (min-width:950px) {
-  .dir.c1fovbcy[class][class] {
+  .dir.accessibility__feature-list[class][class] {
     padding-top: 0;
   }
 }
 
-.dir.s15ko7ml[class][class] {
+.dir.accessibility__feature-item[class][class] {
   padding-top: var(--kc-t-qr-j);
   padding-bottom: var(--kc-t-qr-j);
 }
 
 @media (min-width:744px) {
-  .dir.s15ko7ml[class][class] {
+  .dir.accessibility__feature-item[class][class] {
     padding-top: 0;
     padding-bottom: 0;
   }
 }
 
-.dir.f1fh3g4w[class][class] {
+.dir.accessibility__feature-striped[class][class] {
   background-color: var(--f-mkcy-f);
 }
 
 @media (min-width:744px) {
-  .dir.f1fh3g4w[class][class] {
+  .dir.accessibility__feature-striped[class][class] {
     background-color: var(---pc-g-v-g);
   }
 }
@@ -58740,7 +58740,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   flex-direction: column;
 }
 
-.w1julkar[class][class] {
+.flex[class][class] {
   display: flex;
   width: 100%;
 }
