--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -43608,7 +43608,7 @@ video::cue {
   color: #222 !important;
   font-weight: 400 !important;
 }
-._t0tx82 {
+.flex-grow-1 {
   -webkit-box-flex: 1 !important;
   flex-grow: 1 !important;
 }
@@ -70693,7 +70693,7 @@ img {
   padding-right: 24px !important;
 }
 
-._t0tx82 {
+.flex-grow-1 {
   -webkit-box-flex: 1 !important;
   flex-grow: 1 !important;
 }
