--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70409,7 +70409,7 @@ img {
   transition: opacity 300ms ease-out 0s !important;
 }
 
-.h1a2w4o2[class][class] {
+.invisible[class][class] {
   visibility: hidden;
 }
 
