--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -53535,11 +53535,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
@@ -53556,11 +53556,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
@@ -53914,11 +53914,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   position: relative;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 /* accessibility */
@@ -70318,7 +70318,7 @@ img {
   opacity: 0.09049773755656108;
 }
 
-.atm_9s_1ulexfb {
+.block {
   display: block;
 }
 
