--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70314,7 +70314,7 @@ img {
   animation-fill-mode: forwards;
 }
 
-.atm_k4_7tcf61 {
+.animation__opacity-secondary {
   opacity: 0.09049773755656108;
 }
 
