--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70310,7 +70310,7 @@ img {
   animation-name: none;
 }
 
-.dir.atm_12_q7pw6w.atm_12_q7pw6w {
+.dir.animation__fill-mode-forwards.animation__fill-mode-forwards {
   animation-fill-mode: forwards;
 }
 
