--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70306,7 +70306,7 @@ img {
   }
 }
 
-.dir.atm_1c_glywfm.atm_1c_glywfm {
+.dir.animation-name-none.animation-name-none {
   animation-name: none;
 }
 
