--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70179,7 +70179,7 @@ img {
   animation-duration: 1s;
 }
 
-.dir.atm_u_1yy80mb.atm_u_1yy80mb {
+.dir.animation-direction-alternate.animation-direction-alternate {
   animation-direction: alternate;
 }
 
