--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70175,7 +70175,7 @@ img {
   animation-iteration-count: infinite;
 }
 
-.dir.atm_y_9cwzv5.atm_y_9cwzv5 {
+.dir.animation-duration-1s.animation-duration-1s {
   animation-duration: 1s;
 }
 
