--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70171,7 +70171,7 @@ img {
   }
 }
 
-.dir.atm_16_12c5xpv.atm_16_12c5xpv {
+.dir.animation-iteration-count-infinite.animation-iteration-count-infinite {
   animation-iteration-count: infinite;
 }
 
