--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70158,7 +70158,7 @@ img {
   background-color: currentColor;
 }
 
-.dir.atm_1k_1ytfnp0.atm_1k_1ytfnp0 {
+.dir.animation-timing-function-ease-in-out.animation-timing-function-ease-in-out {
   animation-timing-function: ease-in-out;
 }
 
