--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70154,7 +70154,7 @@ img {
   min-width: var(--lilsearch-field-text_min-width, 0);
 }
 
-.dir.atm_2d_1r31cwp.atm_2d_1r31cwp {
+.dir.animation-bg-color-current.animation-bg-color-current {
   background-color: currentColor;
 }
 
