--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -70140,10 +70140,10 @@ img {
 }
 
 /*! LOADER-SPECIFIC CLASSES START */
-.dir.f1xx50dm[class][class] {
+.dir.header__search-btn-wrapper-title[class][class] {
   padding: 0 var(--lilsearch-field_padding-inline);
 }
-.f1xx50dm[class][class] {
+.header__search-btn-wrapper-title[class][class] {
   font-size: var(--c-zdwk-p);
   line-height: var(--j-p-z-kco);
   font-weight: var(--jx-zk-pv);
