fx bugs no.1 remove white line and hide header on desktop while scrolling

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -53924,7 +53924,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 /* accessibility */
 ._1lovwbn {
   position: -webkit-sticky !important;
-  position: sticky !important;
+  position: fixed !important;
   top: 0px !important;
   padding-top: env(safe-area-inset-top, 0) !important;
   -moz-box-sizing: content-box !important;
