--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -65687,34 +65687,34 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   --go-h-jh-l: 8px;
 }
 
-.dir.c15e4bhw[class][class] {
+.dir.wishlist__map-controls[class][class] {
   background: var(--f-mkcy-f);
   box-shadow: var(--cizosd);
   border-radius: var(--go-h-jh-l);
 }
 
-.dir.t92tojf[class][class] {
+.dir.btn-map-ctrl-in[class][class] {
   border-radius: var(--go-h-jh-l) var(--go-h-jh-l) 0 0;
 }
-.dir.rp6dtyx[class][class] {
+.dir.btn-map-ctrl-base[class][class] {
   border: none;
   margin: 0;
   padding: 0;
   background: transparent;
 }
-.dir.cj0q2ib[class][class] {
+.dir.btn-map-ctrl[class][class] {
   background: none;
 }
-.rp6dtyx[class][class] {
+.btn-map-ctrl-base[class][class] {
   overflow: visible;
   font: inherit;
 }
-.sne7mb7[class][class] {
+.btn-map-ctrl-size[class][class] {
   width: 40px;
   height: 40px;
   position: relative;
 }
-.cj0q2ib[class][class] {
+.btn-map-ctrl[class][class] {
   color: var(--f-k-smk-x);
   display: flex;
   justify-content: center;
@@ -65730,28 +65730,28 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   opacity: 0.1;
 }
 
-.dir.b1d5ierg[class][class] {
+.dir.btn-map-ctrl-out[class][class] {
   border-radius: 0 0 var(--go-h-jh-l) var(--go-h-jh-l);
 }
-.dir.rp6dtyx[class][class] {
+.dir.btn-map-ctrl-base[class][class] {
   border: none;
   margin: 0;
   padding: 0;
   background: transparent;
 }
-.dir.cj0q2ib[class][class] {
+.dir.btn-map-ctrl[class][class] {
   background: none;
 }
-.rp6dtyx[class][class] {
+.btn-map-ctrl-base[class][class] {
   overflow: visible;
   font: inherit;
 }
-.sne7mb7[class][class] {
+.btn-map-ctrl-size[class][class] {
   width: 40px;
   height: 40px;
   position: relative;
 }
-.cj0q2ib[class][class] {
+.btn-map-ctrl[class][class] {
   color: var(--f-k-smk-x);
   display: flex;
   justify-content: center;
@@ -65796,31 +65796,31 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 
-.dir.c15e4bhw[class][class] {
+.dir.wishlist__map-controls[class][class] {
   background: var(--f-mkcy-f);
   box-shadow: var(--cizosd);
   border-radius: var(--go-h-jh-l);
 }
 
-.dir.rp6dtyx[class][class] {
+.dir.btn-map-ctrl-base[class][class] {
   border: none;
   margin: 0;
   padding: 0;
   background: transparent;
 }
-.dir.cj0q2ib[class][class] {
+.dir.btn-map-ctrl[class][class] {
   background: none;
 }
-.rp6dtyx[class][class] {
+.btn-map-ctrl-base[class][class] {
   overflow: visible;
   font: inherit;
 }
-.sne7mb7[class][class] {
+.btn-map-ctrl-size[class][class] {
   width: 40px;
   height: 40px;
   position: relative;
 }
-.cj0q2ib[class][class] {
+.btn-map-ctrl[class][class] {
   color: var(--f-k-smk-x);
   display: flex;
   justify-content: center;
