--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -50912,7 +50912,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex !important;
   -webkit-align-items: center !important;
   align-items: center !important;
-  width: 48.5% !important;
+  width: 100%;
+}
+@media(min-width: 744px) {
+  ._1xtc178 {
+    width: 48.5% !important;
+  }
 }
 @media (min-width: 1440px) {
   ._1xtc178 {
@@ -50929,7 +50934,12 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex !important;
   -webkit-align-items: center !important;
   align-items: center !important;
-  width: 42% !important;
+  width: 100%;
+}
+@media (min-width: 744px) {
+  ._7wydap {
+    width: 42% !important;
+  }
 }
 ._1pk994 {
   -webkit-box-pack: center !important;
@@ -50945,6 +50955,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   display: flex !important;
   -webkit-justify-content: center !important;
   justify-content: center !important;
+  flex-direction: column-reverse;
+  width: 100%;
+}
+@media (min-width:744px ) {
+  ._1pk994 {
+    flex-direction: row !important;
+    width: auto;
+  }
 }
 @media (min-width: 1440px) {
   ._5s44fd {
@@ -50967,6 +50985,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   ._w4nhf3 {
     padding-top: 48px !important;
     padding-bottom: 48px !important;
+  }
+}
+._g8tq4r {
+  margin-top: 24px;
+}
+@media (min-width: 744px) {
+  ._g8tq4r {
+    margin-top: 0;
   }
 }
 @media (min-width: 1128px) {
