--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -165,6 +165,11 @@ progress {
   row-gap: 0;
 }
 
+.row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 @media (max-width: 743.98px) {
   .row {
     -webkit-column-gap: 12px;
@@ -4899,5 +4904,19 @@ img {
   to {
     opacity: 1;
     visibility: visible;
+  }
+}
+.offcanvas-wrap,
+.offcanvas-panel-right {
+  transition: all 0.25s ease-out;
+}
+
+@media (max-width: 843.98px) {
+  .offcanvas-wrap-right .offcanvas-panel-right {
+    right: 0;
+  }
+
+  .offcanvas-wrap-right .offcanvas-panel-right .menu-offcanvas {
+    right: 0;
   }
 }
