--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -222,87 +222,87 @@
 @font-face {
   font-family: Cereal;
   font-weight: 300;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.woff2?cfb671c4)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.woff2?cfb671c4)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.woff?542488b9)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.woff?542488b9)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.eot?9a3b3656)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Lt.eot?9a3b3656)
       format('eot');
 }
 @font-face {
   font-family: Cereal;
   font-weight: 400;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.woff2?e849748a)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.woff2?e849748a)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.woff?6e81c07f)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.woff?6e81c07f)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.eot?48b1d44b)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bk.eot?48b1d44b)
       format('eot');
 }
 @font-face {
   font-family: Cereal;
   font-weight: 500;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.woff2?aa2d47eb)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.woff2?aa2d47eb)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.woff?a4885a20)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.woff?a4885a20)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.eot?a99ce419)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Md.eot?a99ce419)
       format('eot');
 }
 @font-face {
   font-family: Cereal;
   font-weight: 600;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.woff2?b422e783)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.woff2?b422e783)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.woff?7d39989d)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.woff?7d39989d)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.eot?0e6547a7)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Bd.eot?0e6547a7)
       format('eot');
 }
 @font-face {
   font-family: Cereal;
   font-weight: 700;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.woff2?6877179a)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.woff2?6877179a)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.woff?af8f6d6c)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.woff?af8f6d6c)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.eot?7734d3f6)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_XBd.eot?7734d3f6)
       format('eot');
 }
 @font-face {
   font-family: Cereal;
   font-weight: 800;
-  src: url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.woff2?4cd26492)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.woff2?4cd26492)
       format('woff2'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.woff?8b920e3f)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.woff?8b920e3f)
       format('woff'),
-    url(/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.eot?28a88acb)
+    url(https://news.airbnb.com/wp-content/themes/presser/dist/fonts/AirbnbCereal_W_Blk.eot?28a88acb)
       format('eot');
 }
 @font-face {
   font-family: vcpb-plugin-icons;
-  src: url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.eot?f6ud62);
-  src: url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.eot?f6ud62#iefix)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.eot?f6ud62);
+  src: url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.eot?f6ud62#iefix)
       format('embedded-opentype'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.ttf?f6ud62)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.ttf?f6ud62)
       format('truetype'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.woff?f6ud62)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.woff?f6ud62)
       format('woff'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.svg?f6ud62#vcpb-plugin-icons)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_icons_v2/fonts/vcpb-plugin-icons.svg?f6ud62#vcpb-plugin-icons)
       format('svg');
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
   font-family: vc_grid_v1;
-  src: url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.eot?-9hbgac);
-  src: url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.eot?#iefix-9hbgac)
+  src: url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.eot?-9hbgac);
+  src: url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.eot?#iefix-9hbgac)
       format('embedded-opentype'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.woff?-9hbgac)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.woff?-9hbgac)
       format('woff'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.ttf?-9hbgac)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.ttf?-9hbgac)
       format('truetype'),
-    url(/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.svg?-9hbgac#vc_grid_v1)
+    url(https://news.airbnb.com/wp-content/themes/presser/resources/assets/styles/../fonts/vc_grid/vc_grid_v1.svg?-9hbgac#vc_grid_v1)
       format('svg');
   font-weight: 400;
   font-style: normal;
