fx bugs no. 7 part b & c

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -61439,7 +61439,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-flex-wrap: nowrap !important;
   -ms-flex-wrap: nowrap !important;
   flex-wrap: nowrap !important;
-  overflow-x: auto !important;
+  overflow-x: hidden !important;
   overflow-y: hidden !important;
   -ms-overflow-y: hidden !important;
 }
